envoy/envoy-non-ssl.yaml
static_resources:

  listeners:
  - name: grpc_listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
              log_format:
                    text_format: "timestamp=%START_TIME% client.address=%DOWNSTREAM_REMOTE_ADDRESS% client.local.address=%DOWNSTREAM_LOCAL_ADDRESS% upstream.cluster=%UPSTREAM_CLUSTER% upstream.host=%UPSTREAM_HOST% request.bytes=%BYTES_RECEIVED% request.duration=%DURATION% useragent=%REQ(USER-AGENT)% authority=%REQ(:AUTHORITY)% request.id=%REQ(X-REQUEST-ID)% x-for=%REQ(X-FORWARDED-FOR)% method=%REQ(:METHOD)% path=%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% protocol=%PROTOCOL% response.bytes=%BYTES_SENT% s [...]
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: service_grpc_backend

  clusters:
  - name: service_grpc_backend
    type: LOGICAL_DNS
    http2_protocol_options: {}
    connect_timeout: 1s
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: service_grpc_backend
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 50051
